package com.job.designpattern.bridge;

public class HandsetBrandN extends HandsetBrand {

    @Override
    public void run() {
        handsetSoft.run();
    }

}
