package com.job.designpattern.bridge;

public abstract class HandsetSoft {

    public abstract void run();
}
